examples/canary/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-preview
spec:
  selector:
    app: canary-demo
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
