examples/canary/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-stable
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
    - host: olukotun.circleci-demo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-demo-stable
                port: 
                  number: 80
